--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "uvicorn (>=0.34.2,<0.35.0)",
     "typer (>=0.15.2,<0.16.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "matplotlib (>=3.10.1,<4.0.0)"
+    "matplotlib (>=3.10.1,<4.0.0)",
+    "emoji (>=2.14.1,<3.0.0)"
 ]
 
 [tool.poetry]
@@ -36,3 +37,6 @@ ipykernel = "^6.29.5"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+car-topic-modeling-cli = "car_topic_modeling.cli:app"
